--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False
 JWT_SECRET_KEY = 'key for login form'
 MAIL_SERVER = 'smtp.gmail.com'
 MAIL_PORT = 465
-MAIL_USE_SSL = True
+MAIL_USE_SSL = False
+MAIL_USE_TLS = True
 MAIL_USERNAME = 'igkai2884@gmail.com'
 MAIL_PASSWORD = 'lpsfolvswnhjsnbz'
+TWILIO_ACCOUNT_SID='ACedfca19e17cc01d2c3c3bf6f1a457488'
+TWILIO_AUTH_TOKEN='716c6486389c008fa27062fd924534b8'
+TWILIO_VERIFY_SERVICE_ID='VA65fb5263609a6dabe784959917218d35'
